# chip-8-emulator

./: .clang-tidy  CMakeLists.txt  README.md  vcpkg.json
cmake/: build-setup.cmake  clang-tidy.cmake  options-log.cmake  sanitizers.cmake
include/chip_8/: backend.hpp  chip_8.hpp  chip_state.hpp  display.hpp  env.hpp  error.hpp  font.hpp  frontend.hpp  instruction_set.hpp  rpl_flags.hpp  stack.hpp
src/: main.cpp
src/chip_8/: chip_8.cpp  instruction_set.cpp
test/: CMakeLists.txt
test/include/test/: instruction_set.hpp
